--- a/package.json
+++ b/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "u7buy-webhook-handler",
+  "name": "simple-webhook",
   "version": "1.0.0",
-  "description": "Webhook handler for U7BUY -> Discord with signature validation and file logging",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "axios": "^1.4.0",
-    "express": "^4.18.2",
-    "winston": "^3.8.2"
+    "express": "^4.19.2"
   }
 }
